kubernetes/argocd/applications/security/authentik/referencegrant-ak-outpost.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-ak-outpost-middleware-from-media
  namespace: security
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: media
  to:
    - group: traefik.io
      kind: Middleware
