kubernetes/argocd/applications/security/authentik/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: security
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - auth.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          port: 80
          weight: 1
